# projeto-com-TDD

TDD/: Makefile  docker-compose.yml  pyproject.toml
TDD/store/: main.py  routers.py
TDD/store/controllers/: product.py
TDD/store/core/: config.py  exceptions.py
TDD/store/db/: mongo.py
TDD/store/models/: base.py
TDD/store/schemas/: base.py  product.py
TDD/store/usecases/: product.py
TDD/tests/: conftest.py  factories.py
TDD/tests/controllers/: test_product.py
TDD/tests/schemas/: test_product.py
TDD/tests/usecases/: test_product.py
