[tool.poetry]
name = "tdd project"
version = "0.0.1"
description = ""
authors = ["Juniorjorged12 <junior.jorged12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.4"
motor = "^3.5.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"
httpx = "^0.27.0"

[tool.pytest.ini.options]
asyncio_mode = "auto"
addopts = [
    "--strict-config",
    "--strict-makers",
    "--ignore=docs_src",
    ]
xfail_strict = true
junit_family ="xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
